--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "multer": "^1.4.5-lts.1",
+    "node-fetch": "^3.3.2",
     "xlsx": "^0.18.5"
   }
 }
